2006-11-07 Thorsten Kahler <thorsten.kahler@dkd.de>
	* Optional tab-style menu
	* Added some german translations to CSH

2006-10-31 Martin Kutschker <martin.t.kutschker@blackbox.net>
	* Show a compact info of direct mail in all commands of mode "direct mail"

2006-10-25 Thorsten Kahler <thorsten.kahler@dkd.de>
	* Dropped PAGE object tx_directmail_pi1_test (typeNum 199), send correct Content-type with tx_directmail_pi1 (typeNum 99) instead

2006-10-17 Martin Kutschker <martin.t.kutschker@blackbox.net>
	* Added field renderedsize to TCA as type "none" (format "filesize")

2006-10-12 Martin Kutschker <martin.t.kutschker@blackbox.net>
	* Add an option to create direct mail and fetch URL in one step

2006-10-11 Martin Kutschker <martin.t.kutschker@blackbox.net>
	* parse_url(): suppress warnings and check results

2006-10-09 Martin Kutschker <martin.t.kutschker@blackbox.net>
	* Added fields scheduled, scheduled_begin, scheduled_end to TCA as type "none" (format "datetime")
	* Implement issue #4214: change form encoding of module to multipart/form-data
	* Fix bug #4297: broken SQL in getListOfRecipentCategories() when the table has no MM-table
	* Add hooks to modify the module menu and the menu of the "direct mail" mode
	* Add hook handle new commands of the "direct mail" mode

2006-10-05 Thorsten Kahler <thorsten.kahler@dkd.de>
	* Fixed path to jsfunc.evalfield.js in BE module

2006-08-8 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Version 2.1.5
	* Correction: display of some statistics was erroneous. Thanks to David Bocher.
	* Two new constants in the Direct Mail Plain Text static template: doubleLF and removeSplitChar.
	* Partial fix for bugtracker issue 3207: Recipient list from Website User Group and users with multiple user groups. Will work at least with MySQL.

2006-07-14 Thorsten Kahler <thorsten.kahler@dkd.de>
	* Chapter "Personalizing direct mail content" extended in manual.sxw
